--- a/Q2b.html
+++ b/Q2b.html
@@ -11,6 +11,7 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            
         }
         .container {
             width: 50%;
@@ -18,7 +19,7 @@
             background: white;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            height: 200vh;
         }
        
         h1 {
@@ -40,7 +41,7 @@
         <div class="info">
             <p><strong>Name:</strong> KORANG VINCENT</p>
             <p><strong>Phone Number:</strong> 0249363980</p>
-            <p><strong>Email Address:</strong> korangvincent23@gmail.com</p>
+            <p><strong>Email Address:</strong> korangvincent123@gmail.com</p>
             <p><strong>Program:</strong> BSC.INFORMATION TECHNOLOGY</p>
             <p><strong>Level:</strong> LEVEL 300</p>
             <p><strong>Index Number:</strong> UEB3254622</p>
